added packages info