@@ -4,9 +4,13 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 import dev.tillmann.model.characters.*;
 
+/**
+ * All characters that can be drawn are on this pile.
+ */
 public class CharactersPile {
     public static CharactersPile Instance = new CharactersPile();
 
@@ -35,10 +39,16 @@ public class CharactersPile {
         return getRandomCharacters(predicate, characters.size());
     }
 
+    /**
+     * Returns {@code howMany} random characters, which must satisfy the {@code predicate}
+     * @param predicate
+     * @param howMany
+     * @return
+     */
     public List<GameCharacter> getRandomCharacters(Predicate<GameCharacter> predicate, int howMany) {
         if(howMany < 0) { throw new UnsupportedOperationException(); }
 
-        List<GameCharacter> result = new ArrayList<>(characters.stream().filter(ch -> predicate.test(ch)).toList());
+        List<GameCharacter> result = new ArrayList<>(characters.stream().filter(ch -> predicate.test(ch)).collect(Collectors.toList()));
         Collections.shuffle(result);
         result = result.subList(0, Math.min(howMany, result.size()));
 
@@ -50,12 +60,20 @@ public class CharactersPile {
         return result;
     }
 
+    /**
+     * Returns characters back to the pile.
+     * @param charactersToReturn
+     */
     public void returnCharacters(List<GameCharacter> charactersToReturn) {
         for(GameCharacter character : charactersToReturn) {
             returnCharacter(character);
         }
     }
 
+    /**
+     * Returns one character back to the pile.
+     * @param character
+     */
     public void returnCharacter(GameCharacter character) {
         characters.add(character);
         charactersOut.remove(character);
